--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/" text=""></ion-back-button>
+      <ion-back-button defaultHref="/" text="" color="primary"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-capitalize" >{{ titulo }}</ion-title>
+    <ion-title class="ion-text-capitalize" color="primary" >{{ titulo }}</ion-title>
   </ion-toolbar>
 </ion-header>
