--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,12 +1,15 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first"></ion-menu-button>
+    </ion-buttons>
     <ion-title color="primary">Pagina de Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <ion-list>
-    <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" detail="true">
+    <ion-item *ngFor="let item of componentes | async" [routerLink]="item.redirectTo" detail="true">
       <ion-icon slot="start" [name]="item.icon" color="primary"></ion-icon>
       <ion-label>{{ item.name }}</ion-label>
     </ion-item>
