Seccion 5 - Video 70 finilizado

--- a/src/app/pages/card/card.page.html
+++ b/src/app/pages/card/card.page.html
@@ -1,6 +1,6 @@
 <app-header titulo="Pagina de las tarjetas"></app-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" fullscreen>
   <ion-card>
     <img src="https://albertonews.com/wp-content/uploads/2019/12/Chris-Hemsworth.-Thor.jpg" alt="">
     <ion-card-header>
