--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -1,6 +1,9 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Search</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/" text="" color="primary"></ion-back-button>
+    </ion-buttons>
+    <ion-title color="primary">Search</ion-title>
   </ion-toolbar>
   <ion-searchbar 
               placeholder="Buscar albúm" 
