--- a/src/app/pages/segment/segment.page.html
+++ b/src/app/pages/segment/segment.page.html
@@ -23,7 +23,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let item of (superHeroes | async) | filtro:termino:'publisher'">
+    <ion-item *ngFor="let item of (superHeroes | async) | filtro:termino:'publisher'" class="animate__animated animate__fadeIn animate__faster">
       <ion-label>
         <h3>{{ item.superhero }} <small>{{ item.alter_ego }}</small> </h3>
         <p>
@@ -33,6 +33,20 @@
       <ion-label slot="end" class="ion-text-right">
         {{ item.publisher }}
       </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list *ngIf="(superHeroes | async) === null">
+    <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1]">
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+      <ion-skeleton-text slot="end" animated style="width: 20%"></ion-skeleton-text>
     </ion-item>
   </ion-list>
 </ion-content>
