--- a/src/app/pages/slides/slides.page.html
+++ b/src/app/pages/slides/slides.page.html
@@ -16,13 +16,15 @@
           {{ item.desc }}
         </ion-card-content>
 
-      </ion-card>
-    </ion-slide>
-
-    <ion-slide>
         <ion-button (click)="onClick()" expand="block" fill="clear">
           Comenzar
         </ion-button>
+
+      </ion-card>
+    <!-- </ion-slide>
+
+    <ion-slide> -->
+
     </ion-slide>
   </ion-slides>
 </ion-content>
